--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,9 +21,9 @@
       <div id="header">
         <nav>
           <ul>
-            <li><a href="/">Home</a></li>
-            <li><a href="{{ site.mine.current }}">Current</a></li>
-            <li class="fork"><a href="{{ site.github.repository_url }}">Source</a></li>
+            <li class="title"><a href="{{ site.mine.home }}">Home</a></li>
+            <li class="fork"><a href="{{ site.mine.current }}">Current</a></li>
+            <li class="downloads"><a href="{{ site.github.repository_url }}">Source</a></li>
             {% if site.show_downloads %}
               <li class="downloads"><a href="{{ site.github.zip_url }}">ZIP</a></li>
               <li class="downloads"><a href="{{ site.github.tar_url }}">TAR</a></li>
