--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -20,3 +20,7 @@
   background: linear-gradient(to right, #FFCC00, #FF9900); /* Optional: Change gradient on hover */
 }
 
+nav {
+  background: #0000
+}
+
