fix gradient path for nav buttons

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -18,7 +18,7 @@
   /* border-radius: 5px; /* Optional: Add rounded corners */
 }
 
-.navigation a:hover {
+#header nav ul li a:hover {
   background: linear-gradient(to right, #FFCC00, #FF9900); /* Optional: Change gradient on hover */
 }
 
