min border on hover

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -20,6 +20,7 @@
 
 #header nav ul li a:hover {
   background: linear-gradient(to right, #FFCC00, #FF9900); /* Optional: Change gradient on hover */
+  border: 0px;
 }
 
 .navigation {
